--- a/mission.html
+++ b/mission.html
@@ -17,7 +17,10 @@
 
 	<h1>Starbuzz Coffee's Mission</h1>
 	<p>To provide all the caffeine that you need to power your life.
-	   Just drink it.</p>
+	   Just drink it.
+	<br>
+		<a href="index.html">Back to menu</a>
+	</p>
 </body>
 <html>
 
