--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	  <a href="mission.html" title="Our Mission">Read about our Mission</a>
 	  <br>
 	  <br>
-	  Read the <a href="http://wickedlysmart.com/buzz#Coffee"
+	  Read the <a target="_blank" href="http://wickedlysmart.com/buzz#Coffee"
 		      title="Read all about caffeine on the Buzz">Caffeine Buzz</a>
 	</p>
 <body>
